# Maplestory-Guild-Database

./: function.py  main.py  main.spec  pyproject.toml  readme.txt  server_list.py  test.spec  온도 길드원 현황_2021_03_22.xlsx  찹찹 길드원 현황.xlsx  찹찹 길드원 현황_2021_02_27.xlsx  찹찹 길드원 현황_2021_03_05.xlsx  찹찹 길드원 현황_2021_03_22.xlsx
