[tool.poetry]
name = "maplestoryguilddatabase"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
openpyxl = "^3.0.6"
requests = "^2.25.1"
termcolor = "^1.1.0"
parmap = "^1.5.2"
tqdm = "^4.57.0"
pyinstaller = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
